# CryptoBot

./: .gitignore  ANALYSE_COUTS_DEEPSEEK.md  COMPARAISON_SOLUTIONS.md  DEX_COMPARAISON_PROFIT.md  EXPLICATION_BOT.md  GUIDE_DERIBIT_SETUP.md  GUIDE_INSTALLATION_VPS.md  GUIDE_SETUP_TESTNET.md  GUIDE_SOLUTION_FRANCE.md  GUIDE_UTILISATION_HYPERLIQUID.md  HOW_IT_WORKS.md  HYPERLIQUID_TESTNET.md  README.md  REPONSES_QUESTIONS.md  RESUME_FONCTIONNEMENT.md  RESUME_SOLUTION.md  SPEC_HYPERLIQUID_LLM.md  SPEC_INTERFACE_MONITORING.md  STRATEGIES_HYPERLIQUID_PROFIT.md  env.example  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
configs/: deepseek.env.sample  live.deepseek.paper.yaml  live.deribit.yaml  live.frugal.yaml  live.hyperliquid.testnet.optimized.yaml  live.hyperliquid.yaml  live.sample.yaml  paper.sample.yaml
context/: README.md  current_context.md
cryptobot/backtest/: engine.py
cryptobot/broker/: exchange_testnet.py  executor.py  fast_client.py  futures_paper.py  hyperliquid_broker.py  llm_risk.py  (+3 more)
decisions/: README.md
deploy/: cryptobot-hyperliquid.service  cryptobot-live.service  cryptobot-paper.service  install_service.sh  launch.sh  restart_if_running.sh  setup_vps.sh  start_smart_bot.sh  update.sh  update_ci.sh
docs/: DOCUMENTATION_UNIFIEE.md  ENV_HYPERLIQUID_EXAMPLE.txt  SPEC_LEARNING_AUTONOMY.md
scripts/: install_interactive.sh  monitor.sh  pre_commit_secrets_guard.sh  setup_env_local.sh  show_llm_costs.py
strategy/: README.md  execution_plan.md
tests/: test_cli_shell.py  test_learning_adaptive.py  test_learning_bandits.py  test_learning_memory.py  test_monitor_engine.py  test_monitor_insights.py  test_monitor_reporter.py  test_risk_logic.py  test_storage_episodes.py
(+60 files in other folders)
